#48 - Create about page in the settings
